cluster/apps/traefik/traefik/ingress/monitoring/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-grafana
  namespace: monitoring
  annotations:
    #kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/hostname: grafana.lan.${EXTERNAL_DOMAIN}
    #external-dns.alpha.kubernetes.io/target: ${LB_IP_TRAEFIK}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: redirect-to-https
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          passHostHeader: true
          port: 80
  tls:
    secretName: "wildcard-internal-${EXTERNAL_DOMAIN/./-}-tls"
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-prometheus
  namespace: monitoring
  annotations:
    #kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/hostname: prometheus.lan.${EXTERNAL_DOMAIN}
    #external-dns.alpha.kubernetes.io/target: ${LB_IP_TRAEFIK}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: redirect-to-https
      services:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          passHostHeader: true
          port: 9090
  tls:
    secretName: "wildcard-internal-${EXTERNAL_DOMAIN/./-}-tls"
